succesfully executed inputed go code
