# api-gateway/pkg/api/handlers/user.go
@@ -1,6 +1,8 @@
 package handlers
 
 import (
+	"errors"
+	"fmt"
 	"io"
 	"net/http"
 
@@ -18,8 +20,9 @@ type userHandlerImp struct {
 
 func NewUserHandler(user interfaces.UserClient, utils *utils.Utils, goexec interfaces.GoCodeExecClient) handler.UserHandler {
 	return &userHandlerImp{
-		user:  user,
-		utils: *utils,
+		user:   user,
+		utils:  *utils,
+		goexec: goexec,
 	}
 }
 
@@ -54,20 +57,35 @@ func (u *userHandlerImp) ViewAllProblems(e echo.Context) error {
 //	@Tags			user
 //	@Accept			text/plain
 //	@Produce		text/plain
-//	@Success		200	{object}	[]response.Problem
-//	@Failure		400	{object}	[]response.Problem
-//	@Failure		401	{object}	[]response.Problem
-//	@Failure		404	{object}	[]response.Problem
-//	@Failure		500	{object}	[]response.Problem
+//	@Security		BearerAuth
+//	@Param			code	body		string					true	"Go code to execute"
+//	@Success		200		{object}	string					"success"
+//
+//	@Failure		400		{object}	response.JsonResponse	"Bad Request"
+//	@Failure		401		{object}	response.JsonResponse	"Unauthorized"
+//	@Failure		403		{object}	response.JsonResponse	"Forbidden"
+//	@Failure		500		{object}	response.JsonResponse	"Internal Server Error"
+//
 //	@Router			/user/go/exec [post]
 func (u *userHandlerImp) WriteCode(e echo.Context) error {
-	body, err := io.ReadAll(e.Request().Body)
+
+	code := e.Request().Body
+	if code == nil {
+		err := errors.New("nil point error")
+		u.utils.ErrorJson(e, err, http.StatusBadRequest)
+		return errors.New("nil point error")
+	}
+
+	body, err := io.ReadAll(code)
 	if err != nil {
 		u.utils.ErrorJson(e, err, http.StatusBadRequest)
 		return err
 	}
-
-	out, err := u.goexec.WriteGoCode(e, body)
+	fmt.Println("here 1")
+	defer func() {
+		fmt.Println("err", err)
+	}()
+	out, err := u.goexec.WriteGoCode(e, &body)
 
 	if err != nil {
 		u.utils.ErrorJson(e, err, http.StatusBadGateway)
@@ -76,6 +94,6 @@ func (u *userHandlerImp) WriteCode(e echo.Context) error {
 	// outString := string(out)
 	// fmt.Println("out sting ", outString)
 
-	e.Blob(http.StatusOK, "text/plain", out)
+	e.Blob(http.StatusOK, "text/plain", *out)
 	return nil
 }
